----------
v6.0.0-git
----------

[mms] Display message range when dragging slider on dynamic mailbox page.


-----------
v6.0.0beta4
-----------

[mms] Add predefined templates to ACL management screen (Request #10648).
[mms] Capture key shortcuts on dynamic mailbox page even if focus is on IFRAME
      HTML message data (Bug #11428).
[mms] All IMP templates now use Horde_View.
[mms] Add swipe action buttons to the smartmobile mailbox page.
[mms] Optimize loading of message bodies when using dynamic view.
[mms] Load new mailbox when renaming current mailbox in dynamic view (Request
      #11394).
[mms] Add simple address autocompleter to smartmobile compose page.
[mms] Add refresh button to smartmobile folder page.
[jan] Fix popdown positioning in mailbox table header (Bug #11384).


-----------
v6.0.0beta3
-----------

[mms] Allow certain iCalendar events to be configured to automatically update
      the local user's calendar (Request #11376).
[mms] Remember message selections when changing mailboxes in dynamic view.
[mms] Add ability to edit list of safe addresses used with the
      image_replacement preference.
[mms] Add attachment download links to smartmobile view (Request #11379).
[mms] Indicate deleted messages with strikethrough in smartmobile mailbox
      listing (Request #11362).
[mms] Show polled children in smartmobile folder list when parent mailbox is
      not polled (Bug #11238).
[mms] More complete handling of linked data in subject header across views
      (Bug #11372).
[mms] Add Top link to smartmobile mailbox page.
[mms] Fixes to the iTip Request handler (Bug #11264).
[mms] Fix searching in smartmobile view (Bug #11365).
[mms] Tweak smartmobile mailbox page to use mobile-style list clicking
      (Request #11364).
[mms] Fix regression in updating dynamic folder list when deleting parent
      mailboxes that contain children (Bug #11296).
[mms] Fix regression preventing compose messages from being sent in the