@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Fix thread view when mailbox is not thread sorted (Bug #11320).
 * [mms] Display message range when dragging slider on dynamic mailbox page.
  </notes>
  <contents>
@@ -2759,6 +2760,7 @@
    <date>2012-10-12</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [mms] Fix thread view when mailbox is not thread sorted (Bug #11320).
 * [mms] Display message range when dragging slider on dynamic mailbox page.
    </notes>
   </release>
